// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Text/Default FEATURED type 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #3498db;
  text-align: left;
}

<div
  className="c0"
  size={18}
  type="#3498db"
>
  Awesome Text
</div>
`;

exports[`Storyshots Text/Default HUGE size 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
}

<div
  className="c0"
  size={24}
  type="#2f313a"
>
  Awesome Text
</div>
`;

exports[`Storyshots Text/Default LARGE size 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
}

<div
  className="c0"
  size={18}
  type="#2f313a"
>
  Awesome Text
</div>
`;

exports[`Storyshots Text/Default MEDIUM size 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
}

<div
  className="c0"
  size={16}
  type="#2f313a"
>
  Awesome Text
</div>
`;

exports[`Storyshots Text/Default NEGATIVE type 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #dd3311;
  text-align: left;
}

<div
  className="c0"
  size={18}
  type="#dd3311"
>
  Awesome Text
</div>
`;

exports[`Storyshots Text/Default NEUTRAL type 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
}

<div
  className="c0"
  size={18}
  type="#59636f"
>
  Awesome Text
</div>
`;

exports[`Storyshots Text/Default POSITIVE type 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2ecc71;
  text-align: left;
}

<div
  className="c0"
  size={18}
  type="#2ecc71"
>
  Awesome Text
</div>
`;

exports[`Storyshots Text/Default SMALL size 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
}

<div
  className="c0"
  size={14}
  type="#2f313a"
>
  Awesome Text
</div>
`;

exports[`Storyshots Text/Default SUBTLE type 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: rgba(0,0,0,0.32);
  text-align: left;
}

<div
  className="c0"
  size={18}
  type="rgba(0, 0, 0, 0.32)"
>
  Awesome Text
</div>
`;

exports[`Storyshots Text/Default WHITE type 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
  text-align: left;
}

<div
  style={
    Object {
      "background": "cadetblue",
    }
  }
>
  <div
    className="c0"
    size={18}
    type="white"
  >
    Awesome Text
  </div>
</div>
`;

exports[`Storyshots Text/Default X_LARGE size 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
}

<div
  className="c0"
  size={20}
  type="#2f313a"
>
  Awesome Text
</div>
`;

exports[`Storyshots Text/Default centered 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
}

<div
  className="c0"
  size={18}
  type="#2f313a"
>
  Awesome Text
</div>
`;

exports[`Storyshots Text/Default custom letter-spacing 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  -webkit-letter-spacing: 3px;
  -moz-letter-spacing: 3px;
  -ms-letter-spacing: 3px;
  letter-spacing: 3px;
}

<div
  className="c0"
  letterSpacing="3px"
  size={18}
  type="#2f313a"
>
  Awesome Text
</div>
`;

exports[`Storyshots Text/Default custom line height 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: rgba(0,0,0,0.32);
  text-align: left;
  line-height: 100px;
}

<div
  style={
    Object {
      "backgroundColor": "lightblue",
      "height": 100,
    }
  }
>
  <div
    className="c0"
    size={18}
    type="rgba(0, 0, 0, 0.32)"
  >
    Awesome Text
  </div>
</div>
`;

exports[`Storyshots Text/Default default - LARGE size, NORMAL type, left aligned 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
}

<div
  className="c0"
  size={18}
  type="#2f313a"
>
  Awesome Text
</div>
`;

exports[`Storyshots Text/Default extended style 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
}

.c1 {
  font-style: italic;
}

<div
  className="c0 c1"
  size={18}
  type="#2f313a"
>
  Awesome Text
</div>
`;

exports[`Storyshots Text/Default font weight out of theme 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 800;
}

<div
  className="c0"
  fontWeight={800}
  size={18}
  type="#2f313a"
>
  Awesome Text
</div>
`;

exports[`Storyshots Text/Default font weight theme light 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 300;
}

<div
  className="c0"
  fontWeight="light"
  size={18}
  type="#2f313a"
>
  Awesome Text
</div>
`;

exports[`Storyshots Text/Default font weight theme title 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

<div
  className="c0"
  fontWeight="title"
  size={18}
  type="#2f313a"
>
  Awesome Text
</div>
`;

exports[`Storyshots Text/Default justified 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: justify;
}

<div
  className="c0"
  size={18}
  type="#2f313a"
>
  Awesome Text
</div>
`;

exports[`Storyshots Text/Default responsive 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-size: 5pt;
}

@media screen and (min-width:321px) {
  .c0 {
    font-size: 16px;
  }
}

@media screen and (min-width:415px) {
  .c0 {
    font-size: 24px;
  }
}

@media screen and (min-width:835px) {
  .c0 {
    font-size: 5rem;
  }
}

<div
  className="c0"
  fontSize={
    Array [
      "5pt",
      2,
      24,
      "5rem",
    ]
  }
  size={18}
  type="#2f313a"
>
  Awesome Text
</div>
`;

exports[`Storyshots Text/Default right aligned 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: right;
}

<div
  className="c0"
  size={18}
  type="#2f313a"
>
  Awesome Text
</div>
`;

exports[`Storyshots Text/Default uppercase 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  text-transform: uppercase;
}

<div
  className="c0"
  size={18}
  type="#2f313a"
>
  Awesome Text
</div>
`;

exports[`Storyshots Text/Default with string truncate 1`] = `
.c0 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<div
  style={
    Object {
      "width": "200px",
    }
  }
>
  <div
    className="c0"
    size={18}
    type="#2f313a"
  >
    TOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO BIG
  </div>
</div>
`;
